--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,28 @@
+#-----------------------------------------
+# PROJETO
+#-----------------------------------------
+
+## Diretorios ##
+
+_anotacoes/**
+_fontes/**
+
+app/configuration/**
+
+## Arquivos ##
+
+#-----------------------------------------
+# FRAMEWORK
+#-----------------------------------------
+
+#-----------------------------------------
+# IDE
+#-----------------------------------------
+
+#-----------------------------------------
+# AMBIENTE E FERRAMENTAS
+#-----------------------------------------
+.directory
 vendor/
 node_modules/
 npm-debug.log
-
-# Laravel 4 specific
-bootstrap/compiled.php
-app/storage/
-
-# Laravel 5 & Lumen specific
-public/storage
-public/hot
-storage/*.key
-.env.*.php
-.env.php
-.env
-Homestead.yaml
-Homestead.json
-
-# Rocketeer PHP task runner and deployment package. https://github.com/rocketeers/rocketeer
-.rocketeer/
